[package]
name = "opencast-notifications-worker"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
byteorder = "1.5"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
minicbor = "0.25"
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
p384 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
quick-xml = { version = "0.38", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
url = "2.5"
worker = { version = "0.8", features = ["d1"] }
worker-macros = "0.8"
x509-parser = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rusqlite = "0.40.1"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
